--- a/website/blog.css
+++ b/website/blog.css
@@ -43,10 +43,13 @@ h6, .h6 {
 
 .blog-masthead {
   background-color: #b8dfb6;
-  -webkit-box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
-          box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
+  
 }
-
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
 
 }
 /* Nav links */
