--- a/website/blog.css
+++ b/website/blog.css
@@ -25,7 +25,6 @@ h6, .h6 {
 
 }
 
-
 /*
  * Override Bootstrap's default container.
  */
@@ -42,7 +41,8 @@ h6, .h6 {
  */
 
 .blog-masthead {
-  background-color: #b8dfb6;
+  background-color: green;
+  opacity: 1;
   
 }
 .sticky {
@@ -51,7 +51,6 @@ h6, .h6 {
   width: 100%;
 }
 
-}
 /* Nav links */
 .blog-nav-item {
   position: relative;
@@ -66,7 +65,7 @@ h6, .h6 {
   text-decoration: none;
 }
 
-{box-sizing:border-box}
+* {box-sizing:border-box}
 
 /* Slideshow container */
 .slideshow-container {
@@ -159,35 +158,6 @@ h6, .h6 {
  from {opacity: .4}
  to {opacity: 1}
 }
-var slideIndex = 1;
-showSlides(slideIndex);
-
-// Next/previous controls
-function plusSlides(n) {
-  showSlides(slideIndex += n);
-}
-
-// Thumbnail image controls
-function currentSlide(n) {
-  showSlides(slideIndex = n);
-}
-
-function showSlides(n) {
-  var i;
-  var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("dot");
-  if (n > slides.length) {slideIndex = 1}
-  if (n < 1) {slideIndex = slides.length}
-  for (i = 0; i < slides.length; i++) {
-      slides[i].style.display = "none";
-  }
-  for (i = 0; i < dots.length; i++) {
-      dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";
-  dots[slideIndex-1].className += " active";
-}
-
 
 /* Active state gets a caret at the bottom */
 .blog-nav .active {
@@ -223,7 +193,7 @@ function showSlides(n) {
   font-size: 60px;
   font-weight: normal;
   font-family:serif;
-  rgb(209, 152, 187)
+  color: rgb(209, 152, 187)
 }
 .blog-description {
   font-size: 20px;
