--- a/website/blog.css
+++ b/website/blog.css
@@ -41,18 +41,7 @@ h6, .h6 {
  */
 
 .blog-masthead {
-<<<<<<< Updated upstream
-  background-color: green;
-  
-=======
-  background-color: #b8dfb6;
-
->>>>>>> Stashed changes
-}
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
+  background-color: #b6c0df;
 }
 
 /* Nav links */
@@ -61,11 +50,11 @@ h6, .h6 {
   display: inline-block;
   padding: 10px;
   font-weight: 500;
-  color: #cdddeb;
+  color: #07284f;
 }
 .blog-nav-item:hover,
 .blog-nav-item:focus {
-  color: #fff;
+  color: rgb(179, 1, 1);
   text-decoration: none;
 }
 
@@ -111,18 +100,18 @@ h6, .h6 {
 
 /* Caption text */
 .text {
- color: #f2f2f2;
+ color: #b4b2b2;
  font-size: 15px;
  padding: 8px 12px;
  position: absolute;
  bottom: 8px;
  width: 100%;
- text-align: center;
+ text-align: right;
 }
 
 /* Number text (1/3 etc) */
 .numbertext {
- color: #f2f2f2;
+ color: #b4b2b2;
  font-size: 12px;
  padding: 8px 12px;
  position: absolute;
@@ -179,7 +168,7 @@ h6, .h6 {
   font-size: 60px;
   font-weight: normal;
   font-family:serif;
-  color: rgb(209, 152, 187)
+  color: rgb(2, 23, 163)
 }
 .blog-description {
   font-size: 20px;
